# individualized-pate

./: CHANGELOG.md  README.md  pyproject.toml
experiment_plans/set_0_baseline/: cifar10.yaml  fashion_mnist.yaml  mnist.yaml  svhn.yaml
experiment_plans/set_2_fixed_budgets/: cifar10.yaml  fashion_mnist.yaml  mnist.yaml  svhn.yaml
experiment_plans/set_4_vary_proportions/: cifar10.yaml  fashion_mnist.yaml  mnist.yaml  svhn.yaml
experiment_plans/set_5_paper_submission/: readme.md  run_single_mnist_script.sh
experiment_plans/set_6_reviewer_response/: run_single_experiment.sh  run_table_1.sh  run_table_1__mnist.sh  run_table_1__svhn.sh  run_table_1__svhn_2.sh  run_table_1__svhn_2__2.sh
experiment_plans/templates/: cifar.yaml  fashion_mnist.yaml  mnist.yaml  svhn.yaml
notebooks/adult/experiments/: analyze.ipynb
notebooks/mnist/: explore_mnist.ipynb
per_point_pate/: hprms_search.py  main.py  teacher_accuracy_test_script.sh  teacher_accuracy_tests.py
per_point_pate/data/: data_augmentation.py  data_factory.py  load_datasets.py  numpy_dataset.py  split_data.py
per_point_pate/experiments/: base.py  experiment_factory.py
per_point_pate/models/: classifiers.py
per_point_pate/privacy/: core.py  pate.py
per_point_pate/studies/: execution.py  parameters.py  run_votings.py  train_students.py  train_teachers.py
tests/: conftest.py
tests/data/: test_data_augmentation.py  test_load_datasets.py  test_split_data.py
tests/models/: test_classifier_wrapper.py
tests/privacy/: test_privacy.py
tests/studies/: test_parameters.py  test_parameters.yaml
(+135 files in other folders)
